jupyter_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {NAME}
  namespace: accu-{NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10240m
    nginx.ingress.kubernetes.io/rewrite-target: /modeler/workspace/{ID}/$2
spec:
  rules:
    - host: {host}
      http:
        paths:
          - path: /modeler/workspace/{ID}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: {NAME}
                port:
                  number: 8888
